# device-tree-custom

./: .gitignore  CMakeLists.txt  devicetree.conf  devicetree.h  devicetree_generated.h  gendefine.py  test_dt.c  version.h.in  xlinx.cmake
boards/boardA/: devicetree.ini
boards/boardB/: devicetree.ini
